# product-cli-project

./: .gitignore  README.md  order_api_pb2.py  order_api_pb2_grpc.py  orders.db  product_cli.py  products_export.json  pyproject.toml  server.py  watch_db.py
src/product_cli/: cli.py  order_api_pb2.py  order_api_pb2_grpc.py
